# 20th_intern_MOSION

./: README.md
OpenCV/day1/hw1/hw1_package/: CMakeLists.txt  package.xml
OpenCV/day1/hw1/hw1_package/include/: hw1.hpp
OpenCV/day1/hw1/hw1_package/src/: main.cpp
OpenCV/day1/hw2/hw2_pkg/include/hw2_pkg/: main_window.hpp
OpenCV/day1/hw2/hw2_pkg/src/: main_window.cpp
OpenCV/day1/hw2/hw2_pkg/ui/: mainwindow.ui
