<package format="3">
  <name>hw1_pkg</name>
  <version>0.0.0</version>
  <description>hw1</description>
  <maintainer email="mso@example.com">mso</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>opencv</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
